test/files/neg/warn-unused-imports.check
warn-unused-imports_2.scala:134: error: type mismatch;
 found   : Int(42)
 required: Sample.X
    f(42)                       // error
      ^
warn-unused-imports_2.scala:58: warning: Unused import
    import p1.A // warn
              ^
warn-unused-imports_2.scala:63: warning: Unused import
    import p1.{ A, B } // warn on A
                ^
warn-unused-imports_2.scala:68: warning: Unused import
    import p1.{ A, B } // warn on both
                ^
warn-unused-imports_2.scala:68: warning: Unused import
    import p1.{ A, B } // warn on both
                   ^
warn-unused-imports_2.scala:74: warning: Unused import
    import c._  // warn
             ^
warn-unused-imports_2.scala:79: warning: Unused import
    import p1._ // warn
              ^
warn-unused-imports_2.scala:86: warning: Unused import
    import c._  // warn
             ^
warn-unused-imports_2.scala:92: warning: Unused import
    import p1.c._  // warn
                ^
warn-unused-imports_2.scala:99: warning: Unused import
    import p1._   // warn
              ^
warn-unused-imports_2.scala:119: warning: Unused import
    import p1.A   // warn
              ^
warn-unused-imports_2.scala:133: warning: Unused import
    import Sample.Implicits._   // warn
                            ^
warn-unused-imports_2.scala:144: warning: Unused import
    import Sample.Implicits.useless     // warn
                            ^
warn-unused-imports_2.scala:148: warning: Unused import
    import java.io.File                 // warn
                   ^
warn-unused-imports_2.scala:149: warning: Unused import
    import scala.concurrent.Future      // warn
                            ^
warn-unused-imports_2.scala:150: warning: Unused import
    import scala.concurrent.ExecutionContext.Implicits.global // warn
                                                       ^
warn-unused-imports_2.scala:151: warning: Unused import
    import p1.A                         // warn
              ^
16 warnings found
one error found
